samples/_failures_safe/1761526056_96c638_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d0c1795.c: In function ‘main’:
./samples/SAFE/__tmp_3d0c1795.c:150:5: error: expected expression at end of input
  150 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_3d0c1795.c:150:5: error: expected declaration or statement at end of input
